# univ

./: README.md
AOC/Lab2/: Client.cs  Client.csproj  Client.sln  Client2.0.cs  Server.cs  Server2.0.cs  client.cpp  server.cpp
OOP/HW/HW6/Patterns/: Patterns.sln
OOP/HW/HW6/Patterns/AbstractFactory/: AbstractFactory.csproj  ClassDiagram1.cd  Program.cs
OOP/HW/HW6/Patterns/Adapter/: Adapter.csproj  Program.cs
OOP/HW/HW6/Patterns/Builder/: Builder.csproj  Program.cs
OOP/HW/HW6/Patterns/Composite/: Composite.csproj  Program.cs
OOP/HW/HW6/Patterns/Decorator/: Decorator.csproj  Program.cs
OOP/HW/HW6/Patterns/Facade/: Facade.csproj  Program.cs
OOP/HW/HW6/Patterns/FactoryMethod/: FactoryMethod.csproj  Program.cs
OOP/HW/HW6/Patterns/Mediator/: Mediator.csproj  Program.cs
OOP/HW/HW6/Patterns/ModelingProject1/: ModelingProject1.modelproj  UMLClassDiagram1.classdiagram  UMLClassDiagram1.classdiagram.layout
OOP/HW/HW6/Patterns/Patterns/: Patterns.csproj  Program.cs
OOP/HW/HW6/Patterns/Prototype/: Program.cs  Prototype.csproj
OOP/HW/HW6/Patterns/PrototypeFigure/: Program.cs  (+1 more)
is/pacman/: CMakeLists.txt  README.md
is/pacman/include/: cell.h  game_map.h  game_window.h  ghost.h  ghostController.h  minimax.h  monster.h  pacman.h  pacmanController.h  path_finder.h  point.h  statistics.h
is/pacman/levels/: level0.txt  level1-tmp.txt  level1.txt  level2-tmp.txt  level2.txt  level3-tmp.txt  level3.txt
is/pacman/src/: game_map.cpp  ghost.cpp  ghostController.cpp  main.cpp  minimax.cpp  monster.cpp  pacman.cpp  pacmanController.cpp  path_finder.cpp
(+21 files in other folders)
